style.scss
/* ... */
.collection-thumbnail {
  position: relative;
  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.35);

  > .collection-thumbnail-body.panel-body {
    padding: 0;
    height: 100%;

    > img {
      max-width: 100%;
      max-height: 100%;
      width: auto;
      height: auto;
    }
  }

  &.panel {
    border: 0;
    border-radius: $border-radius;
    width: $collection-thumbnail-width;
    height: $collection-thumbnail-height;
  }

  .gradient {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7) 70%, rgba(0, 0, 0, 0.9) 93%);
    border-radius: $border-radius;
  }

  .thumbnail-img {
    width: 100%;
    height: 100%;
    border-radius: $border-radius;
  }

  .bottom {
    position: absolute;
    bottom: 6%;
    left: 1em;
    right: 1em;
    display: flex;

    flex-direction: column;

    .name {
      @extend .h3;

      .btn {
        @extend .btn-embed;
      }
    }

    .details {
      font-size: smaller;
      color: $text-color-disabled;
      display: flex;

      > *:not(:first-child) {
        margin-left: 1em;
      }

      .icon {
        margin-right: 0.5em;
      }
    }
  }

  &:hover {
    .bottom {
      &.editable {
        .no-hover {
          display: none;
        }
      }
    }

    .thumbnail-hover-menu {
      .hover-content {
        opacity: 1.0;
      }
    }
  }

  &:not(:hover) {
    .bottom {
      .hover {
        display: none;
      }
    }
    .thumbnail-hover-menu {
      .hover-content {
        opacity: 0;
      }
    }
  }

  .thumbnail-hover-menu {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    pointer-events: none;

    .btn {
      pointer-events: all;
    }

    .hover-content {
      width: 100%;
      height: 100%;
    }

    .buttons .btn {
      border: 0px;
      display: flex;
      width: 100%;
      margin: 4px;
    }
  }

  .hover {
    .collection-name {
      .form-group {
        margin-bottom: 0;
      }
    }
  }

  .no-hover {
    margin-right: 1.5em;
  }

  .hover {
    .collection-name {
      &.displaying {
        align-items: flex-end;
      }
    }
  }

  .revision-number {
    background-color: $brand-bg;
    padding: 0 0.5em;
  }

  .author {
    position: absolute;
    top: 0.5em;
    left: 0.5em;

    img {
      width: 16px;
      height: 16px;
      margin-right: 0.5em;
    }
  }

  .collection-status-container {
    position: absolute;
    top: 0.5em;
    right: 0.5em;

  }

  .collection-name {
    display: flex;
    .form-control {
      font-family: $font-family-base;
      font-size: medium;
    }

    .btn {
      margin-left: 0.5em;
      font-size: medium;
    }
  }

  .hover-content {
    border-radius: $border-radius;
    display: flex;
    background-color: unset !important;

    > .btn-group-vertical {
      width: 128px;
      align-items: center;
      margin-left: auto;
      margin-right: auto;
      margin-top: 5em;
      // justify-content: center;
      > .btn {
        justify-content: center;
        align-items: center;
        > .icon {
          margin-right: 0.5em;
        }
      }
    }
  }
}

.collection-status {
  background-color: $brand-primary;
  text-transform: uppercase;
  padding: 0 0.5em;
}

.collection-list {
  display: flex;
  flex-wrap: wrap;

  > .placeholder {
    margin: auto;
  }

  .collection-thumbnail.panel {
    margin: $half-gutter;
  }

  .collection-thumbnail-body {
    .placeholder {
      .placeholder-icon {
        width: 52px;
        height: 52px;
      }

      .placeholder-text {
        font-size: 1.4em;
        text-align: center;
        margin-top: 1em;
      }
    }
  }
}

#collection-panel-group {
  .panel-heading {
    display: flex;
    align-items: center;

    >.panel-title {
      margin-left: 0.5em;
    }
  }

  > .panel {
    border: 0;

    > .panel-body {
      border-top-color: $gray-dark;
    }
  }
}

.collection-detail-cell {
  padding: 0 0.5em;

  &:not(:first-child) {
    border-left: 1px solid $gray-light;
  }

  img {
    width: 32px;
    height: 32px;
    margin-right: 0.5em;
  }

  .title {
    color: $text-color-disabled;
    white-space: nowrap;
  }
}

.collection-overview.panel {
  overflow: hidden;
  padding-right: 1em;
  padding: $half-gutter;
  height: calc(#{$collection-thumbnail-height} + #{$gutter-width} + 2 * #{$border-width});

  .panel {
    border: none;
  }

  .media {
    // margin-bottom: $half-gutter;
    height: 100%;

    .media-left {
      height: 100%;
    }
  }

  .collection-thumbnail {
    margin: 0 $half-gutter;
    // max-width: $collection-thumbnail-width;
    // max-height: 100%;
    // width: auto;
    height: auto;
    width: auto;

    .thumbnail-img {
      transition: max-width 500ms, max-height 500ms;
      max-width: $collection-thumbnail-width !important;
      max-height: $collection-thumbnail-height !important;
    }
  }

  &.collection-mod-selection {
    height: calc(#{$collection-mod-image-height} + #{$gutter-width} + 2 * #{$border-width});

   .collection-thumbnail {
      .thumbnail-img {
        max-width: calc(#{$collection-thumbnail-width} / 2) !important;
        max-height: calc(#{$collection-thumbnail-height} / 2) !important;
      }
    }

    .installing-mod-image {
      max-width: $collection-mod-image-width;
      max-height: $collection-mod-image-height;
    }

    .collection-page-detail-bar {
      display: none;
    }

    .collection-description-container-outer {
      display: none;
    }

    .collection-title {
      color: $text-color-disabled;
    }
  }

  .collection-overview-title {
    display: flex;
    align-items: center;
    > .collection-status {
      margin-left: 1em;
    }
  }

  .collection-title {
    @extend .h3;
  }
}
/* ... */

